core/common/src/main/kotlin/com/example/core/common/error/ErrorCode.kt
package com.example.core.common.error

enum class ErrorCode {
    E500
}
